# cu-lite

./: .travis.yml  Makefile.am  Makefile.in  chat.c  configure  configure.in  conn.c  conn.h  copy.c  cu.c  getopt.h  log.c  policy.h  prot.c  prot.h  sysdep.h  system.h  uuconf.h  uucp.h  uudefs.h
lib/: Makefile.in
test/: Makefile.am  Makefile.in
unix/: Makefile.am  Makefile.in  cusub.c  filnam.c  init.c  jobid.c  lock.c  pipe.c  portnm.c  seq.c  serial.c  spool.c  status.c  tcp.c  tli.c  tmpfil.c  work.c
uuconf/: Makefile.am  Makefile.in  calout.c  cnfnms.c  dial.c  dnams.c  hdial.c  hsinfo.c  init.c  llocnm.c  maxuxq.c  port.c  remunk.c  runuxq.c  sinfo.c  snams.c  syssub.c  tdialc.c  tsinfo.c  unk.c  uucnfi.h  val.c  vsinfo.c
